--- a/placarExato.bet_07.html
+++ b/placarExato.bet_07.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BOLAO_DO_DIA_03/07</title>
+    <<link rel="icon" href="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/images%20(37).jpeg" type="image/jpeg">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+ <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen" />
+<link rel="icon" href="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/images%20(37).jpeg" type="image/x-icon"> 
+<meta name="url" content="https://multijogo-38.webnode.page/dezenas/"> 
+    <title>BOLAO EXATO </title>
        <style>
         body {
             text-align: center;
