--- a/placarExato.bet_07.html
+++ b/placarExato.bet_07.html
@@ -2,12 +2,15 @@
 <html lang="pt-BR">
 <head>
  <link rel="icon" href="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/images%20(37).jpeg" type="image/jpeg">
+ 
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
- <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen" />
+
 <link rel="icon" href="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/images%20(37).jpeg" type="image/x-icon"> 
-<meta name="url" content="https://multijogo-38.webnode.page/dezenas/"> 
-    <title>BOLAO EXATO </title>
+
+<meta name="url" content="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/images%20(37).jpeg"> 
+    <title>BOLAO⚽EXATO</title>
        <style>
         body {
             text-align: center;
