--- a/placarExato.bet_07.html
+++ b/placarExato.bet_07.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
- <link rel="icon" href="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/images%20(37).jpeg" type="image/jpeg">
+ <link rel="icon" href="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/images%20(37).jpg" type="image/jpeg">
  
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
-<link rel="icon" href="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/images%20(37).jpeg" type="image/x-icon"> 
+<link rel="icon" href="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/images%20(37).jpg" type="image/x-icon"> 
 
-<meta name="url" content="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/images%20(37).jpeg"> 
+<meta name="url" content="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/images%20(37).jpg"> 
     <title>BOLAO⚽EXATO</title>
        <style>
         body {
