--- a/placarExato.bet_07.html
+++ b/placarExato.bet_07.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
- <link rel="icon" href="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/images%20(37).jpg" type="image/jpeg">
+ <link rel="icon" href="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/multijogo.jpg" type="image/jpeg">
  
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
-<link rel="icon" href="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/images%20(37).jpg" type="image/x-icon"> 
+<link rel="icon" href="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/apostaMulti.jpg" type="image/x-icon"> 
 
-<meta name="url" content="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/images%20(37).jpg"> 
+<meta name="url" content="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/apostaMulti.jpg"> 
     <title>BOLAO⚽EXATO</title>
        <style>
         body {
@@ -155,7 +155,7 @@
    <div class="content">
         <h1>BOLAO DO DIA 07/07</h1>
         <h2>O JOGO SÓ PODERÁ SER FEITO ATÉ AS <span class="horas">16:50</span></h2>
-        <img class="ima" src="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/images%20(37).jpg" alt="Imagem">
+        <img class="ima" src="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/apostaMulti.jpg" alt="Imagem">
    
     <input type="text" placeholder="Nome" id="nome">
     
