--- a/placarExato.bet_07.html
+++ b/placarExato.bet_07.html
@@ -10,7 +10,7 @@
 <link rel="icon" href="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/apostaMulti.jpg" type="image/x-icon"> 
 
 <meta name="url" content="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/apostaMulti.jpg"> 
-    <title>BOLAO⚽EXATO</title>
+    <title>GREEN⚽EXATO</title>
        <style>
         body {
             text-align: center;
@@ -155,7 +155,7 @@
    <div class="content">
         <h1>BOLAO DO DIA 07/07</h1>
         <h2>O JOGO SÓ PODERÁ SER FEITO ATÉ AS <span class="horas">16:50</span></h2>
-        <img class="ima" src="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/apostaMulti.jpg" alt="Imagem">
+        <img class="ima" src="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/multijogo.jpg" alt="Imagem">
    
     <input type="text" placeholder="Nome" id="nome">
     
