--- a/placarExato.bet_07.html
+++ b/placarExato.bet_07.html
@@ -10,7 +10,7 @@
 <link rel="icon" href="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/apostaMulti.jpg" type="image/x-icon"> 
 
 <meta name="url" content="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/apostaMulti.jpg"> 
-    <title>GREEN⚽EXATO</title>
+    <title>APOSTA⚽GREEN</title>
        <style>
         body {
             text-align: center;
@@ -20,6 +20,10 @@
             background: green;
             color: white;
             font-size: 18px;
+            width:50%;
+            text-align:center;
+            margin-Left:25%;
+            border-radius:10px;
         }
         h2 {
             font-size: 14px;
@@ -54,13 +58,13 @@
         #total_display {
             font-weight: bold;
             color: white;
-            margin-left: 10px;
             font-size: 16px;
             margin-top: 10px;
             background: green;
             text-align: center;
             border-radius: 10px;
             padding: 2px 15px;
+            width:100%;
         }
         button {
             border-radius: 10px;
@@ -153,10 +157,10 @@
 </head>
 <body onload="verificarCalcular()">
    <div class="content">
-        <h1>BOLAO DO DIA 07/07</h1>
-        <h2>O JOGO SÓ PODERÁ SER FEITO ATÉ AS <span class="horas">16:50</span></h2>
+      
         <img class="ima" src="https://raw.githubusercontent.com/SuaSortehoje/placarBet/main/multijogo.jpg" alt="Imagem">
-   
+     <h1>GREEN DO DIA 07/07</h1>
+        <h2>O JOGO SÓ PODERÁ SER FEITO ATÉ AS <span class="horas">16:50</span></h2>
     <input type="text" placeholder="Nome" id="nome">
     
     <!-- Séries -->
