--- a/placarExato.bet_07.html
+++ b/placarExato.bet_07.html
@@ -76,7 +76,7 @@
             const codigo = prompt("Digite o código para continuar:");
 
             if (validCodes.includes(codigo)) {
-                alert("Código válido! Você pode continuar.");
+                alert("Código ( APROVADO )  pode continuar CLICK ( OK ).");
                 enviarMensagemParaWhatsapp();
             } else {
                 alert("Código inválido. Tente novamente.");
