--- a/ApostaGreen.bet_08.html
+++ b/ApostaGreen.bet_08.html
@@ -18,7 +18,7 @@
         <div>
             <span style="font-weight: bold; color: white;">SERIE A</span>
         </div>
-        <div id="total_display" style="font-weight: bold; color: white; font-size: 16px; margin-top: 10px; background: green; text-align: center; border-radius: 10px; padding: 2px 15px; width: 100%;">Total: R$ 0.00</div>
+        <div id="total_display" style="font-weight: bold; color: white; font-size: 16px; margin-top: 10px; background: green; text-align: center; border-radius: 10px; padding: 2px 15px; width: 80%; margin-left:10px;">Total: R$ 0.00</div>
         <div id="divisions-container-a"></div>
         
         <div>
