--- a/placarExato.bet_11.html
+++ b/placarExato.bet_11.html
@@ -551,7 +551,7 @@ function enviarMensagemParaWhatsapp() {
     mensagem += `\n              Valor A PAGAR: R$ *${valor.toFixed(2)}* \n`;
 
     // Gerar o link do WhatsApp com a mensagem
-    var url = `https://api.whatsapp.com/send?phone=seu-numero&text=${encodeURIComponent(mensagem)}`;
+    var url = `https://api.whatsapp.com/send?phone=5571992290058&text=${encodeURIComponent(mensagem)}`;
 
     // Abrir o link em uma nova aba
     window.open(url, '_blank');
