--- a/placarExato.bet_11.html
+++ b/placarExato.bet_11.html
@@ -22,12 +22,12 @@
         <div id="divisions-container-a"></div>
         
         <div>
-            <span style="font-weight: bold; color: white;">SERIE B</span>
+            <span style="display:none;font-weight: bold; color: white;">SERIE B</span>
         </div>
         <div id="divisions-container-b"></div>
         
         <div>
-    <span style="font-weight: bold; color: white;">SERIE C</span>
+    <span style="display:none;font-weight: bold; color: white;">SERIE C</span>
 </div>
 <div id="divisions-container-c"></div>
 
